test/libsolidity/syntaxTests/functionTypes/call_value_on_non_payable_function_type.sol
contract C {
    function (uint) external returns (uint) x;
    function f() public {
        x{value: 2}(1);
    }
}
// ----
// TypeError: (94-105): Cannot set option "value" on a non-payable function type.
